Changes in robCompositions version 2.2.2
  + outCoDa() now contains a parameter alpha instead of h

Changes in robCompositions version 2.2.1
  + encoding issues in data sets nutrients and nutrients_branded

Changes in robCompositions version 2.2.0
  + spline density estimation, various functions 

Changes in robCompositions version 2.1.2
  + imputeUDL modified a few parts  

Changes in robCompositions version 2.1.1
  + function variation has a new parameter method (and a new method)

Changes in robCompositions version 2.1.0
  + new functions cubeCoord, cubeCoordWrapper, tabCoord, tabCoordWrapper 
  + new data set employment2
  + new data set manu_abs

Changes in robCompositions version 2.0.10
  + updated documentation
  + going back to old version of imputeBDLs
  + mcd based robust variation (instead of mad) in function variation

Changes in robCompositions version 2.0.9
  + new method in imputeBDLs
  + minor change in imputeBDLs
  + new function imputeUDLs

Changes in robCompositions version 2.0.8
  + old Rd files management to meet new CRAN policy

Changes in robCompositions version 2.0.7
  + bug in daFisher resolved
  + additional argment in missPattern
  + imputeBDLs now includes a new method 

Changes in robCompositions version 2.0.6
  + new method for imputation of rounded zeros in imputeBDLs

Changes in robCompositions version 2.0.5
  + improved documentation
  + version of robCompositions fits now to the Springer book
  + orthbasis now times -1
  + ilr.2x2 now fits to the formulas in the book, and not for the paper
  + bug in daFisher resolved
  + bug in external variables in pcaCoDa solved
  + registering C-code

Changes in robCompositions version 2.0.4
  + aDist now again works for vectors
  + added following data sets: 
  socExp, 
  cancerMN, 
  educFM, 
  electionATbp, 
  employment, 
  employment_df, 
  GDPsatis, 
  govexp,
  instw, 
  isic32, 
  mortality_tab, 
  precipitation,  
  rcodes, 
  teachingStuff,
  unemployed